# Lore

./: CONTRIBUTING.md  Cargo.toml  core.rs  launch.sh  lore.db  main.rs  readme.md  ui.rs
core/: io.rs  mod.rs  pty.rs  shell.rs  state.rs  terminal.rs
core/ai/: ai.rs  prompt.txt
db/: mod.rs  schema.txt  storage.rs
ui/: ai_panel.rs  search.rs  terminal.rs
