[package]
name = "Lore"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"] }
color-eyre = "0.6"
crossterm = "0.29.0"
portable-pty = "0.9.0"
anyhow = "1"
vt100 = "0.16.2"
rusqlite = { version = "0.40.1", features = ["bundled"] }
chrono = "0.4"      # for timestamps
uuid = { version = "1.0", features = ["v4"] }  # for session ids

[[bin]]
name = "Lore"
path = "main.rs"
